# PolynomialSizeCalculate

./: Cargo.toml  README.md
src/: main.rs
src/imports/: mod.rs  polygon.rs  vec2d.rs
